RBACMiddleware changed in some way
