# internal/models/user/with_tokens.go
@@ -2,7 +2,7 @@ package user
 
 // UserWithTokens model is user details with token.
 type UserWithTokens struct {
-	AccessToken  string `json:"accessToken,omitempty"`
-	RefreshToken string `json:"refreshToken,omitempty"`
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
 	User         AllUserDTO
 }
