# internal/modules/users/routes/user_routes.go
@@ -2,7 +2,6 @@ package routes
 
 import (
 	"github.com/gofiber/fiber/v2"
-	"github.com/jumayevgadam/tsu-toleg/internal/config"
 	mwMngr "github.com/jumayevgadam/tsu-toleg/internal/gateway/middleware"
 	"github.com/jumayevgadam/tsu-toleg/internal/infrastructure/cache"
 	"github.com/jumayevgadam/tsu-toleg/internal/infrastructure/database"
@@ -15,11 +14,13 @@ func Routes(f fiber.Router, mw *mwMngr.MiddlewareManager, dataStore database.Dat
 	// Init Service.
 	Service := service.NewUserService(mw, dataStore, redisStore)
 	// Init Handler.
-	Handler := handler.NewUserHandler(&config.Config{}, Service)
+	Handler := handler.NewUserHandler(mw, Service)
 
 	authGroup := f.Group("/auth")
 	{
 		authGroup.Post("/:role/sign-up", Handler.CreateUser())
 		authGroup.Post("/:role/login", Handler.Login())
+		authGroup.Post("/renew-access-token", Handler.RenewAccessToken())
+		// authGroup.Post("/:role/logout", Handler.Logout())
 	}
 }
